--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ a {
   color: #d21034;
 }
 
+/*
 .footer {
   position: fixed;
   left: 0;
@@ -44,21 +45,47 @@ a {
   color: white;
   text-align: center;
 }
+*/
+
+/* Footer */
+.footer{
+  background-color: #333; 
+  /*border-top-style: solid; 
+  border-top-width: 5px; 
+  border-top-color: #0BADA6; */
+  color: white; 
+  min-height: 20px; 
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px; 
+  text-align: center; 
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  padding-top: 15px; 
+  }
+
+
 
 .grid-container {
   display: grid;
-  grid: 70px / auto auto;
+  height: 300px;
+  align-content: start;
+
+  grid-template-columns: auto auto;
   grid-gap: 10px;
-  background-color: black;
+  background-color: rgb(255, 255, 255);
   padding: 10px;
 }
 
+
 .grid-container > div {
-  background-color: rgba(255, 255, 255, 0.8);
-  text-align: center;
+  background-color: rgba(247, 243, 243, 0.8);
+  text-align: left;
   padding: 20px 0;
-  font-size: 30px;
+  font-size: 15px;
 }
+
 
 
 /* Selecting elements by class */
@@ -71,6 +98,10 @@ a {
 #main-bio,
 #contact-info,
 #bio-image {
+  float: left;
+}
+
+#portofolio {
   float: left;
 }
 
@@ -97,3 +128,7 @@ a {
   height: 200px;
   margin-right: 20px;
 }
+/*
+#portfolio {
+  width: 100%;
+}*/
