--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ a {
 
 .grid-container {
   display: grid;
-  height: 300px;
+ /* height: 300px; */
   align-content: start;
 
   grid-template-columns: auto auto;
